[package]
name = "canon-json"
version = "0.2.1"
edition = "2021"
description = "serde_json Formatter to serialize as RFC 8785 canonical JSON"
license = "MIT OR Apache-2.0"
repository = "https://github.com/containers/canon-json-rs"
keywords = ["json"]

[dependencies]
serde        = "1.0.0"
serde_derive = "1.0"
serde_json   = "1.0"
thiserror = "2.0.12"

[dev-dependencies]
proptest = "1.7.0"
similar-asserts = "1.7.0"
cap-std = "4.0.0"
sha2 = "0.11.0"
# For cross-integration testing
olpc-cjson = "0.1"
cjson = "0.1.2"
# For round trip testing
serde_json = { version = "1.0", features = ["float_roundtrip"] }

# Synchronized with https://github.com/bootc-dev/bootc/blob/main/Cargo.toml
[lints.rust]
# No unsafe code in this crate
unsafe_code = "forbid"
# Absolutely must handle errors
unused_must_use = "forbid"
# missing_docs is set per-target via #![deny(missing_docs)] in lib.rs
# because cargo lints apply to all targets including examples.
missing_debug_implementations = "deny"
# Feel free to comment this one out locally during development of a patch.
dead_code = "deny"

[lints.clippy]
# These should only be in local code
dbg_macro = "deny"
todo = "deny"
# These two are in my experience the lints which are most likely
# to trigger, and among the least valuable to fix.
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
